@@ -39,6 +39,12 @@ INCOMPATIBLE CHANGES SINCE 2.4.x
 - wxChoice and wxCombobox now handle their size in the same way as in all the
   other ports under MSW, new code is actually correct but different from weird
   stuff they were doing before so the behaviour of your programs might change
+- wxTaskBarIcon objects must now be destroyed before the application can exit.
+  Previously, the application terminated if there were no top level windows;
+  now it terminates if there are no top level windows or taskbar icons left.
+
+wxTaskBarIcon must be explicitly destroyed now, otherwise the application
+  won't exit even though there are no top level windows
 
 
 DEPRECATED METHODS SINCE 2.4.x
@@ -92,6 +98,8 @@ wxMSW:
 - wxMenuBar::GetLabelTop() doesn't include '&'s in the label any more
 - wxRegConf couldn't read global settings without admin privileges and didn't
   even try to do it by default -- now it does
+- wxTaskBarIcon must be explicitly destroyed now, otherwise the application
+  won't exit even though there are no top level windows
 
 wxMotif:
 
